--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <link type="text/css" rel="stylesheet" href="fol.css">
-        <title>El Ártico ha perdido el 14% de su hielo marino perenne en un solo año</title>
+        <title>Darío Marín | Programador Junior</title>
     </head>
     <body background="fondo.png">
         <table>
